fix wrap footer

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -23,7 +23,6 @@ footer {
     align-items: flex-start;
     flex-direction: row !important;
     justify-content: space-between;
-    flex-wrap: wrap;
     gap: 40px;
 }
 
@@ -48,7 +47,6 @@ footer {
 
 .footer-section {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     gap: 40px;
     flex: 1;
